# libbids

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-test.yml
include/: add.hpp  dataset.hpp  entity.hpp  enums.hpp  event.hpp  session.hpp  subject.hpp  utils.hpp
libbids/: __init__.py  dataset.py  enums.py  event.py  notes.py  run.py  session.py  subject.py  task.py  utils.py
libbids/instruments/: __init__.py  eeg_instrument.py  ieeg_instrument.py  instrument.py  joystick_instrument  physio_instrument.py  read_instrument  read_instrument.py  stim_instrument.py  write_instrument.py
scripts/linux/: install-dependencies.sh
scripts/osx/: build.sh  install-dependencies.sh  pyinstall.sh
scripts/windows/: build.bat  install-dependencies.bat  install-dependencies.ps1
src/: add.cpp  dataset.cpp  entity.cpp  event.cpp  ext.cpp  session.cpp  subject.cpp  utils.cpp
tests/: CMakeLists.txt  test_dataset.py  test_entity.py  test_session.py  test_subject.py
tests/bids/: participants.json
tests/src/: main.cpp  test_dataset.cpp  test_entity.cpp  test_enums.cpp  test_event.cpp  test_session.cpp  test_subject.cpp  test_utils.cpp
toolchains/: mingw.cmake
