[build-system]
requires = ["setuptools", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "libbids"
version = "0.0.5"
description = "Library for generating data using the Brain Imaging Data Structure"
authors = [ { name = "Kevin Davis", email = "kevin.davis@miami.edu" } ]
dependencies = [
  "pandas",
  "pybids",
  "PyQt5; sys_platfomr == 'win32'",
  "PyQt6; sys_platform == 'darwin'"
]

[tools.setuptools.packages.find]
exclude = ["tests"]
