[build-system]
requires = ["setuptools", "wheel", "pybind11", "scikit-build"]
build-backend = "setuptools.build_meta"

[project]
name = "libbids"
version = "0.2.1rc1"
description = "Library for generating data using the Brain Imaging Data Structure"
authors = [ { name = "Kevin Davis", email = "kevin.davis@miami.edu" } ]
dependencies = [
  "pandas",
  "pybids",
  "pyedflib",
]

[tools.setuptools.packages.find]
where = ["libbids"]
include = ["build"]
exclude = ["tests"]
